--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
-
-
-
          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
           <a href="https://oceanbitz.com/?r=4632">7. Oceanbitz</a></h3>
           <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
@@ -115,29 +112,26 @@
         <img src="/file/payu.gif" width="468" height="60"/></a><br>
            <p></p></div>
 
-
-      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-        <a href="https://coinadster.com/?ref=208315">13. Coinadster</a></h3>
-                         <p>1.2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
-        <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a><p></p></div>
-
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://coinkrab.com/refer/user/1799">14. Coinkrab.</a></h3>
+        <a href="https://coinkrab.com/refer/user/1799">13. Coinkrab.</a></h3>
         <p> $0.00066 every 5 mins. $0.025 to FaucetPay</p>
         <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
         <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://www.1xbitcoins.com/?r=8362">15. 1xbitcoin</a></h3>
+    <a href="https://www.1xbitcoins.com/?r=8362">14. 1xbitcoin</a></h3>
     <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
     <a target="_blank" href="https://www.1xbitcoins.com/?r=8362"><img src="/file/1x.png" width="468" height="60"></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://multicoins.net/?r=74750">16. Multicoins</a></h3>
+        <a href="https://multicoins.net/?r=74750">15. Multicoins</a></h3>
         <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
           <a target="_blank" href="https://multicoins.net/?r=74750"><img src="/file/mcoins.png" width="468" height="60"></a><p></p></div>
 
-
+          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
+            <a href="https://coinadster.com/?ref=208315">16. Coinadster</a></h3>
+                             <p>1.2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
+            <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
 <a href="https://btcadspace.com/ref/tsaroz">17. Bitcoinadspace</a></h3><p>15 minute btc faucet. PTC ads. Offerwalls. 200 satoshi to FaucetPay</p>
@@ -148,28 +142,36 @@
             <p>$0.0009 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay (Manual)</p>
               <a target="_blank" href="https://faucetclub.org/?r=1565"><img src="/file/fclub.png" width="468" height="60"></a><p></p></div>
 
+              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+                <a href="https://cryptocity.info/faucet/?r=686">19. Coincity</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.01 to FaucetPay</p>
+                <a target="_blank" href="https://cryptocity.info/faucet/?r=686" ><img src="/file/cryptocity.png" width="468" height="60"/></a><br><p></p></div>
+
+                <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+                  <a href="https://solanaclick.top/?r=3681">20. Bitcoinadspace</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.01 to FaucetPay</p>
+                  <a target="_blank" href="https://solanaclick.top/?r=3681" ><img src="/file/solanaclick.png" width="468" height="60"/></a><br><p></p></div>
+
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">19. Final Dutchy</a></h3>
+	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">21. Final Dutchy</a></h3>
       <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://faucetcrypto.com/ref/51422">20. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">22. FaucetCrypto</a></h3>
         <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls, multiple currencies, low minimum.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-  <a href="https://dinntoks.com/?r=8182">21. Dinntoks</a></h3>
+  <a href="https://dinntoks.com/?r=8182">23. Dinntoks</a></h3>
   <p>$0.0005 every 5 mins. PTC, Shortlinks. $0.01 to Faucetpay.</p>
    <a target="_blank" href="https://dinntoks.com/?r=8182"><img src="/file/dinn.png" width="468" height="60"></a>
    <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://bitsfree.net/?r=96452">22. Bitsfree</a></h3>
+	<a href="https://bitsfree.net/?r=96452">24. Bitsfree</a></h3>
    <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://bitsfree.net/?r=96452"><img src="/file/BitsFree.png" width="468" height="60"></a>
  <p></p></div>
@@ -177,7 +179,7 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://pipeflare.io/r/22uo">23. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">25. Pipeflare</a></h3>
        <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>
@@ -187,41 +189,41 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://freebitco.in/?r=5188579">24. Freebitco.in</a></h3>
+    <a href="https://freebitco.in/?r=5188579">26. Freebitco.in</a></h3>
     <p> $0.002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
   </div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-<a href="https://firefaucet.win/ref/27478">25. Fire Faucet</a></h3>
+<a href="https://firefaucet.win/ref/27478">27. Fire Faucet</a></h3>
     <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls. Happy hour bonus on weekends.</p>
 <a href="https://firefaucet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-      <a href="https://bitcoincyclone.com/?r=3177">26. Bitcoin Cyclone</a></h3>
+      <a href="https://bitcoincyclone.com/?r=3177">28. Bitcoin Cyclone</a></h3>
       <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
       <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
       <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://simplebits.io/ref/n9Z908pvlxST">27. Simplebits</a></h3>
+    <a href="https://simplebits.io/ref/n9Z908pvlxST">29. Simplebits</a></h3>
           <p>30 min faucet. Gamified mining. A bit hard to learn easy to earn.</p>
     <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
       <img src="/file/simple.gif" width="468" height="60"/></a><br>
       <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">28. Cointiply</a></h3>
+	<a href="http://cointiply.com/r/Jx6Kp">30. Cointiply</a></h3>
         <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
     <img src="/file/cply1.gif" width="468" height="60"/></a><br>
   <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://satoshihero.com/en/register?r=j2337039">29. Satoshi Hero</a></h3>
+	<a href="https://satoshihero.com/en/register?r=j2337039">31. Satoshi Hero</a></h3>
             <p>3+ sats every 30 mins. Offerwalls</p>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
     <img src="/file/shero.jpeg" width="468" height="60"/></a><br>
@@ -229,73 +231,73 @@
 
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-              <a href="https://freeshibainu.com/?ref=66538">30. Free Shiba Inu</a></h3>
+              <a href="https://freeshibainu.com/?ref=66538">32. Free Shiba Inu</a></h3>
                          <p>Hourly faucet. Daily promo in twitter. Shortlinks, offerwalls.</p>
               <a target="_blank" href="https://freeshibainu.com/?ref=66538" >
                 <img src="/file/freeshib.jpg" width="468" height="60"/></a><br>
                          <p></p></div>
 
                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                          <a href="https://cripto.win/?r=63305">31. Cripto.win</a></h3>
+                          <a href="https://cripto.win/?r=63305">33. Cripto.win</a></h3>
                           <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.5 withdrawal to FaucetPay.</p>
                            <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-<a href="https://fire-crypto.net/?ref=2411">32. Fire-crypto.net</a></h3><p>$0.0005 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
+<a href="https://fire-crypto.net/?ref=2411">34. Fire-crypto.net</a></h3><p>$0.0005 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
 <a target="_blank" href="https://fire-crypto.net/?ref=2411" >
 <img src="/file/fcnet.png" width="468" height="60"/></a><br><p></p> </div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-              <a href="https://autofaucet.org/r/tsaroz">33. Autofaucet</a></h3>
+              <a href="https://autofaucet.org/r/tsaroz">35. Autofaucet</a></h3>
                    <p>Highest paying shortlins. Withdraw to Faucetpay.</p>
               <a target="_blank" href="https://autofaucet.org/r/tsaroz" >
                 <img src="/file/autofau.png" width="468" height="60"/></a><br><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://coincet.com/?r=30824">34. Coincet</a></h3>
+	<a href="https://coincet.com/?r=30824">36. Coincet</a></h3>
        <p>$0.0004 every 1 min. PTC, Shortlinks, Offerwalls.</p>
 	<a target="_blank" href="https://coincet.com/?r=30824" >
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.bytecash.in/?r=5691">35. Bytecash</a></h3>
+        <a href="https://www.bytecash.in/?r=5691">37. Bytecash</a></h3>
         <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
         <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
         <p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://btcbunch.com/?r=81391">36. BTC bunch</a></h3>
+          <a href="https://btcbunch.com/?r=81391">38. BTC bunch</a></h3>
                      <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
           <a target="_blank" href="https://btcbunch.com/?r=81391" >
             <img src="/file/bunch.png" width="468" height="60"/></a><br>
                      <p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-<a href="https://vivocoin.com/?r=3156">37. Vivo Coin Faucet</a></h3>
+<a href="https://vivocoin.com/?r=3156">39. Vivo Coin Faucet</a></h3>
 <p>$0.0006 every 30 mins. shortliks, ptc, offerwalls. $0.0001 to FaucetPay.</p>
 <a target="_blank" href="https://vivocoin.com/?r=3156" >
 <img src="/file/vivo.png" width="468" height="60"/></a><br><p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://mixfaucet.com/?r=60837">38. Mix Faucet</a></h3>
+  <a href="https://mixfaucet.com/?r=60837">40. Mix Faucet</a></h3>
    <p>$0.0005 every 5 mins. shortliks, ptc, offerwalls. $0.05 to Faucetpay.</p>
    <a target="_blank" href="https://mixfaucet.com/?r=60837" >
     <img src="/file/mix.gif" width="468" height="60"/></a><br><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-      <a href="https://tron-free.com/?r=89595">39. Tron Free</a></h3>
+      <a href="https://tron-free.com/?r=89595">31. Tron Free</a></h3>
        <p>$0.0005 every 5 mins. shortliks, PTC, offerwalls. </p>
        <a target="_blank" href="https://tron-free.com/?r=89595" >
         <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-          <a href="https://fautsy.com/?ref=4508">40. Fautsy</a></h3>
+          <a href="https://fautsy.com/?ref=4508">42. Fautsy</a></h3>
           <p>1+ satoshi every 10 mins. PTC, Shortlinks, Offerwalls. 2000 sats to Faucetpay</p>
             <a target="_blank" href="https://fautsy.com/?ref=4508"><img src="/file/fautsy.png" width="468" height="60"></a><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-<a href="https://rollercoin.com/?r=juwv6dm0">41. Rollercoin</a></h3>
+<a href="https://rollercoin.com/?r=juwv6dm0">43. Rollercoin</a></h3>
 <p>Play games, earn coins passively.</p>
 <a target="_blank" href="https://rollercoin.com/?r=juwv6dm0" >
 <img src="/file/roller.gif" width="468" height="60"/></a><br><p></p></div>
