--- a/index.html
+++ b/index.html
@@ -54,29 +54,31 @@
     <p></p></div>
 
 
-<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-  <a href="https://paidtomoney.com/?r=33137">4. Paidtomoney</a></h3>
-  <p>$0.0006 every 5 min. $0.002 shortlinks. Minimum $0.1 to Faucetpay. Highest earnings.</p>
-  <a target="_blank" href="https://paidtomoney.com/?r=33137"><img src="/file/ptm.png" width="468" height="60"></a><p></p></div>
+
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">5. Vie Faucet</a></h3>
+    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">4. Vie Faucet</a></h3>
          <p>$0.00045 every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
     <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
       <img src="/file/vie.png" width="468" height="60"/></a><br>
          <p></p></div>
 
  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a href="https://claimbits.net/?ref=167319">5. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
   <a target="_blank" href="https://claimbits.net/?ref=167319" >
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
-         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-          <a href="https://oceanbitz.com/?r=4632">7. Oceanbitz</a></h3>
-          <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
-          <a target="_blank" href="https://oceanbitz.com/?r=4632" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
-          <p></p></div>
+   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+    <a href="https://paidtomoney.com/?r=33137">6. Paidtomoney</a></h3>
+    <p>$0.0006 every 5 min. $0.002 shortlinks. Minimum $0.1 to Faucetpay. Highest earnings.</p>
+    <a target="_blank" href="https://paidtomoney.com/?r=33137"><img src="/file/ptm.png" width="468" height="60"></a><p></p></div>
+
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+      <a href="https://cryptowin.io/ref/tsaroz">7 Cryptowin.io</a></h3>
+      <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
+      <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
+      <p></p></div>
 
 
      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
@@ -85,13 +87,12 @@
       <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
       <p></p></div>
 
-
-
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-        <a href="https://cryptowin.io/ref/tsaroz">9. Cryptowin.io</a></h3>
-        <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
-        <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
+        <a href="https://oceanbitz.com/?r=4632">9. Oceanbitz</a></h3>
+        <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
+        <a target="_blank" href="https://oceanbitz.com/?r=4632" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
         <p></p></div>
+
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
           <a href="https://cryptosats.net/?r=11112">10. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
