--- a/index.html
+++ b/index.html
@@ -87,37 +87,39 @@
       <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
       <p></p></div>
 
-      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-        <a href="https://oceanbitz.com/?r=4632">9. Oceanbitz</a></h3>
-        <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
-        <a target="_blank" href="https://oceanbitz.com/?r=4632" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
-        <p></p></div>
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">9. CoinpayU</a></h3>
+             <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
+        <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
+          <img src="/file/payu.gif" width="468" height="60"/></a><br>
+             <p></p></div>
 
+             <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+              <a href="https://coinkrab.com/refer/user/1799">10. Coinkrab.</a></h3>
+              <p> $0.00066 every 5 mins. $0.025 to FaucetPay</p>
+              <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
+              <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p></div>
 
-        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://cryptosats.net/?r=11112">10. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
-          <a target="_blank" href="https://cryptosats.net/?r=11112" >
-          <img src="/file/cryptosa.png" width="468" height="60"/></a><br>
-           <p></p> </div>
-
+              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+                <a href="https://cryptosats.net/?r=11112">11. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
+                <a target="_blank" href="https://cryptosats.net/?r=11112" >
+                <img src="/file/cryptosa.png" width="468" height="60"/></a><br>
+                 <p></p> </div>
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-    <a href="https://bitcointrophy.com/?r=21954">11. Bitcoin Trophy</a></h3>
+    <a href="https://bitcointrophy.com/?r=21954">12. Bitcoin Trophy</a></h3>
       <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
       <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
-     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://www.coinpayu.com/?r=tsaroz">12. CoinpayU</a></h3>
-           <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
-      <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
-        <img src="/file/payu.gif" width="468" height="60"/></a><br>
-           <p></p></div>
 
-        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://coinkrab.com/refer/user/1799">13. Coinkrab.</a></h3>
-        <p> $0.00066 every 5 mins. $0.025 to FaucetPay</p>
-        <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
-        <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p></div>
+
+           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+            <a href="https://oceanbitz.com/?r=4632">13. Oceanbitz</a></h3>
+            <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
+            <a target="_blank" href="https://oceanbitz.com/?r=4632" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
+            <p></p></div>
+
+
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
     <a href="https://www.1xbitcoins.com/?r=8362">14. 1xbitcoin</a></h3>
@@ -148,7 +150,7 @@
                 <a target="_blank" href="https://cryptocity.info/faucet/?r=686" ><img src="/file/cryptocity.png" width="468" height="60"/></a><br><p></p></div>
 
                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                  <a href="https://solanaclick.top/?r=3681">20. Bitcoinadspace</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.01 to FaucetPay</p>
+                  <a href="https://solanaclick.top/?r=3681">20. Solanaclick</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.01 to FaucetPay</p>
                   <a target="_blank" href="https://solanaclick.top/?r=3681" ><img src="/file/solanaclick.png" width="468" height="60"/></a><br><p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
