--- a/index.html
+++ b/index.html
@@ -111,13 +111,12 @@
       <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
       <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://fautsy.com/?ref=4508">13. Fautsy</a></h3>
+        <p>1+ satoshi every 10 mins. PTC, Shortlinks, Offerwalls. 2000 sats to Faucetpay</p>
+          <a target="_blank" href="https://fautsy.com/?ref=4508"><img src="/file/fautsy.png" width="468" height="60"></a><p></p></div>
 
 
-           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-            <a href="https://oceanbitz.com/?r=4632">13. Oceanbitz</a></h3>
-            <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
-            <a target="_blank" href="https://oceanbitz.com/?r=4632" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
-            <p></p></div>
 
 
 
@@ -258,7 +257,7 @@
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 	<a href="https://coincet.com/?r=30824">36. Coincet</a></h3>
-       <p>$0.0004 every 1 min. PTC, Shortlinks, Offerwalls.</p>
+       <p>$0.0004 every 1 min. PTC, Shortlinks, Offerwalls. No popups.</p>
 	<a target="_blank" href="https://coincet.com/?r=30824" >
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
@@ -294,10 +293,11 @@
        <a target="_blank" href="https://tron-free.com/?r=89595" >
         <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
-        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-          <a href="https://fautsy.com/?ref=4508">42. Fautsy</a></h3>
-          <p>1+ satoshi every 10 mins. PTC, Shortlinks, Offerwalls. 2000 sats to Faucetpay</p>
-            <a target="_blank" href="https://fautsy.com/?ref=4508"><img src="/file/fautsy.png" width="468" height="60"></a><p></p></div>
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+          <a href="https://oceanbitz.com/?r=4632">42. Oceanbitz</a></h3>
+          <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
+          <a target="_blank" href="https://oceanbitz.com/?r=4632" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
+          <p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
 <a href="https://rollercoin.com/?r=juwv6dm0">43. Rollercoin</a></h3>
