--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <a target="_blank" href="https://faucetclub.org/?r=1565"><img src="/file/fclub.png" width="468" height="60"></a><p></p></div>
 
               <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                <a href="https://cryptocity.info/faucet/?r=686">19. Coincity</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.01 to FaucetPay</p>
+                <a href="https://cryptocity.info/faucet/?r=686">19. Cryptocity</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.01 to FaucetPay</p>
                 <a target="_blank" href="https://cryptocity.info/faucet/?r=686" ><img src="/file/cryptocity.png" width="468" height="60"/></a><br><p></p></div>
 
                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
