--- a/index.html
+++ b/index.html
@@ -80,41 +80,44 @@
       <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
       <p></p></div>
 
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://coincet.com/?r=30824">8. Coincet</a></h3>
+             <p>$0.0005 every 3 mins. PTC, Shortlinks, Offerwalls. No popups.</p>
+        <a target="_blank" href="https://coincet.com/?r=30824" >
+          <img src="/file/coincet.png" width="468" height="60"/></a><br>
+             <p></p></div>
 
      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://r.adbtc.top/7297">8. Adbtc.top</a></h3>
+      <a href="https://r.adbtc.top/7297">9. Adbtc.top</a></h3>
       <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.coinpayu.com/?r=tsaroz">9. CoinpayU</a></h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">10. CoinpayU</a></h3>
              <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
         <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
           <img src="/file/payu.gif" width="468" height="60"/></a><br>
              <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-              <a href="https://coinkrab.com/refer/user/1799">10. Coinkrab.</a></h3>
+              <a href="https://coinkrab.com/refer/user/1799">11. Coinkrab.</a></h3>
               <p> $0.00066 every 5 mins. $0.025 to FaucetPay</p>
               <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
               <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p></div>
 
               <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                <a href="https://cryptosats.net/?r=11112">11. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
+                <a href="https://cryptosats.net/?r=11112">12. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
                 <a target="_blank" href="https://cryptosats.net/?r=11112" >
                 <img src="/file/cryptosa.png" width="468" height="60"/></a><br>
                  <p></p> </div>
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-    <a href="https://bitcointrophy.com/?r=21954">12. Bitcoin Trophy</a></h3>
+    <a href="https://bitcointrophy.com/?r=21954">13. Bitcoin Trophy</a></h3>
       <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
       <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
-      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://fautsy.com/?ref=4508">13. Fautsy</a></h3>
-        <p>1+ satoshi every 10 mins. PTC, Shortlinks, Offerwalls. 2000 sats to Faucetpay</p>
-          <a target="_blank" href="https://fautsy.com/?ref=4508"><img src="/file/fautsy.png" width="468" height="60"></a><p></p></div>
+
 
           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
             <a href="https://coinadster.com/?ref=208315">14. Coinadster</a></h3>
@@ -259,12 +262,10 @@
               <a target="_blank" href="https://autofaucet.org/r/tsaroz" >
                 <img src="/file/autofau.png" width="468" height="60"/></a><br><p></p></div>
 
-<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://coincet.com/?r=30824">37. Coincet</a></h3>
-       <p>$0.0004 every 1 min. PTC, Shortlinks, Offerwalls. No popups.</p>
-	<a target="_blank" href="https://coincet.com/?r=30824" >
-    <img src="/file/coincet.png" width="468" height="60"/></a><br>
-       <p></p></div>
+                <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+                  <a href="https://fautsy.com/?ref=4508">37. Fautsy</a></h3>
+                  <p>1+ satoshi every 10 mins. PTC, Shortlinks, Offerwalls. 2000 sats to Faucetpay</p>
+                    <a target="_blank" href="https://fautsy.com/?ref=4508"><img src="/file/fautsy.png" width="468" height="60"></a><p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://www.bytecash.in/?r=5691">38. Bytecash</a></h3>
@@ -288,13 +289,13 @@
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
       <a href="https://tron-free.com/?r=89595">41. Tron Free</a></h3>
-       <p>$0.0005 every 5 mins. shortliks, PTC, offerwalls. </p>
+       <p>$0.0006 every 5 mins. shortliks, PTC, offerwalls. </p>
        <a target="_blank" href="https://tron-free.com/?r=89595" >
         <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
           <a href="https://oceanbitz.com/?r=4632">42. Oceanbitz</a></h3>
-          <p>$0.00055 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
+          <p>$0.0006 every 3 mins. PTC, shortlinks, Offerwalls. $0.01 to FaucetPay</p>
           <a target="_blank" href="https://oceanbitz.com/?r=4632" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
           <p></p></div>
 
