--- a/index.html
+++ b/index.html
@@ -34,21 +34,24 @@
 
 
 
-
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+      <a href="https://speedcoins.xyz/?r=924">1. Speedcoins</a></h3>
+      <p>$0.001 every 6 mins. $0.0025 shortlinks. $0.02 instant to FaucetPay.</p>
+      <a target="_blank" href="https://speedcoins.xyz/?r=924"><img src="/file/Speedcoins.gif" width="468" height="60"></a><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-<a href="https://coinpayz.xyz/?r=155318">1. Coinpayz</a></h3>
+<a href="https://coinpayz.xyz/?r=155318">2. Coinpayz</a></h3>
 <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
 <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-  <a href="https://earnbitmoon.club/?ref=145452">2. Earnbitmoon</a></h3>
+  <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
   <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
   <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
   <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-    <a href="https://coinpot.in/?r=135650">3. Coinpot.in</a></h3>
+    <a href="https://coinpot.in/?r=135650">4. Coinpot.in</a></h3>
     <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls, Daily bonus.</p>
     <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
     <p></p></div>
@@ -57,22 +60,19 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">4. Vie Faucet</a></h3>
+    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">5. Vie Faucet</a></h3>
          <p>$0.00045 every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
     <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
       <img src="/file/vie.png" width="468" height="60"/></a><br>
          <p></p></div>
 
  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://claimbits.net/?ref=167319">5. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
   <a target="_blank" href="https://claimbits.net/?ref=167319" >
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
-   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://paidtomoney.com/?r=33137">6. Paidtomoney</a></h3>
-    <p>$0.0006 every 5 min. $0.002 shortlinks. Minimum $0.1 to Faucetpay. Highest earnings.</p>
-    <a target="_blank" href="https://paidtomoney.com/?r=33137"><img src="/file/ptm.png" width="468" height="60"></a><p></p></div>
+
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
       <a href="https://coinadster.com/?ref=208315">7. Coinadster</a></h3>
@@ -152,15 +152,10 @@
         <a target="_blank" href="https://coincet.com/?r=30824" >
           <img src="/file/coincet.png" width="468" height="60"/></a><br><p></p></div>
 
-
-
-
-
-
-<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-<a href="https://btcadspace.com/ref/tsaroz">20. Bitcoinadspace</a></h3><p>15 minute btc faucet. PTC ads. Offerwalls. 200 satoshi to FaucetPay</p>
-<a target="_blank" href="https://btcadspace.com/ref/tsaroz" ><img src="/file/bas.gif" width="468" height="60"/></a><br><p></p></div>
-
+          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+            <a href="https://paidtomoney.com/?r=33137">20. Paidtomoney</a></h3>
+            <p>$0.0006 every 5 min. $0.002 shortlinks. Minimum $0.1 to Faucetpay. Highest earnings.</p>
+            <a target="_blank" href="https://paidtomoney.com/?r=33137"><img src="/file/ptm.png" width="468" height="60"></a><p></p></div>
 
               <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
                 <a href="https://claimercorner.xyz/claimer/?r=29003">21. Claimers corner</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.01 to FaucetPay</p>
