--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                           <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
                             <a target="_blank" href="https://multicoins.net/?r=74750"><img src="/file/mcoins.png" width="468" height="60"></a><p></p></div>
 
- <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
- <a href="https://faucetclub.org/?r=1565">13. Faucetclub</a></h3>
-<p>$0.0009 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay (Manual)</p>
-  <a target="_blank" href="https://faucetclub.org/?r=1565"><img src="/file/fclub.png" width="468" height="60"></a><p></p></div>
+                            <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+                              <a href="https://paidtomoney.com/?r=33137">13. Paidtomoney</a></h3>
+                              <p>$0.0006 every 5 min. $0.002 shortlinks. Minimum $0.1 to Faucetpay. Highest earnings.</p>
+                              <a target="_blank" href="https://paidtomoney.com/?r=33137"><img src="/file/ptm.png" width="468" height="60"></a><p></p></div>
 
               <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
                 <a href="https://cryptosats.net/?r=11112">14. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
