--- a/index.html
+++ b/index.html
@@ -33,25 +33,30 @@
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
 
 
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+      <a href="https://speedcoins.xyz/?r=924">Speedcoins</a></h3>
+      <p>$0.001 every 6 mins. $0.0025 Shortlinks, Offerwalls. $0.02 to FaucetPay Instat.</p>
+      <a target="_blank" href="https://speedcoins.xyz/?r=924"><img src="/file/speedcoins.gif" width="468" height="60"></a><p></p></div>
+
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 <a href="https://coinpayz.xyz/?r=155318">1. Coinpayz</a></h3>
 <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
 <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
-<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-  <a href="https://earnbitmoon.club/?ref=145452">2. Earnbitmoon</a></h3>
-  <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
-  <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
-  <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
+
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-    <a href="https://coinpot.in/?r=135650">3. Coinpot.in</a></h3>
+    <a href="https://coinpot.in/?r=135650">2. Coinpot.in</a></h3>
     <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls, Daily bonus. $0.01 to FaucetPay</p>
     <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
     <p></p></div>
 
-
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+      <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
+      <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
+      <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
+      <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
