--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://speedcoins.xyz/?r=924">Speedcoins</a></h3>
-      <p>$0.001 every 6 mins. $0.0025 Shortlinks, Offerwalls. $0.02 to FaucetPay Instat.</p>
+      <p>$0.001 every 6 mins. $0.0025 Shortlinks, Offerwalls. $0.02 to FaucetPay Instant.</p>
       <a target="_blank" href="https://speedcoins.xyz/?r=924"><img src="/file/speedcoins.gif" width="468" height="60"></a><p></p></div>
 
 
