--- a/index.html
+++ b/index.html
@@ -32,89 +32,78 @@
 	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
 
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+      <a href="https://coinpot.in/?r=135650">1. Coinpot.in</a></h3>
+      <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls, Daily bonus. $0.01 to FaucetPay</p>
+      <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
+      <p></p></div>
+
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://coinpayz.xyz/?r=155318">2. Coinpayz</a></h3>
+        <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
+        <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
+
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://speedcoins.xyz/?r=924">Speedcoins</a></h3>
+      <a href="https://speedcoins.xyz/?r=924">3. Speedcoins</a></h3>
       <p>$0.001 every 6 mins. $0.0025 Shortlinks, Offerwalls. $0.02 to FaucetPay Instant.</p>
       <a target="_blank" href="https://speedcoins.xyz/?r=924"><img src="/file/speedcoins.gif" width="468" height="60"></a><p></p></div>
 
 
-<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-<a href="https://coinpayz.xyz/?r=155318">1. Coinpayz</a></h3>
-<p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
-<a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
-
-
-
-  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-    <a href="https://coinpot.in/?r=135650">2. Coinpot.in</a></h3>
-    <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls, Daily bonus. $0.01 to FaucetPay</p>
-    <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
-    <p></p></div>
-
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
+      <a href="https://earnbitmoon.club/?ref=145452">4. Earnbitmoon</a></h3>
       <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">4. Vie Faucet</a></h3>
+    <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">5. Vie Faucet</a></h3>
          <p>$0.00045 every 3 mins. Easy captcha. High paying PTC, Shortlinks and Offerwalls.</p>
     <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
       <img src="/file/vie.png" width="468" height="60"/></a><br>
          <p></p></div>
 
  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://claimbits.net/?ref=167319">5. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a href="https://claimbits.net/?ref=167319">6. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
   <a target="_blank" href="https://claimbits.net/?ref=167319" >
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
+   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+    <a href="https://tron-free.com/?r=89595">7. Tron Free</a></h3>
+     <p>$0.0006 every 5 mins. shortliks, PTC, offerwalls. </p>
+     <a target="_blank" href="https://tron-free.com/?r=89595" >
+      <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
+
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+        <a href="https://oceanbitz.com/?r=108">8. Oceanbitz</a></h3>
+        <p>$0.00065 every 3 mins. $0.0004 every min. PTC, shortlinks, Offerwalls. $0.005 to FaucetPay</p>
+        <a target="_blank" href="https://oceanbitz.com/?r=108" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
+        <p></p></div>
 
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-      <a href="https://coinadster.com/?ref=208315">6. Coinadster</a></h3>
-                       <p>1.2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
-      <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a><p></p></div>
 
      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://r.adbtc.top/7297">7. Adbtc.top</a></h3>
+      <a href="https://r.adbtc.top/7297">9. Adbtc.top</a></h3>
       <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.coinpayu.com/?r=tsaroz">8. CoinpayU</a></h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">10. CoinpayU</a></h3>
              <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
         <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
           <img src="/file/payu.gif" width="468" height="60"/></a><br>
              <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-              <a href="https://cryptowin.io/ref/tsaroz">9. Cryptowin.io</a></h3>
+              <a href="https://cryptowin.io/ref/tsaroz">11. Cryptowin.io</a></h3>
               <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
               <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
               <p></p></div>
 
-
-
-
-              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                <a href="https://tron-free.com/?r=89595">10. Tron Free</a></h3>
-                 <p>$0.0006 every 5 mins. shortliks, PTC, offerwalls. </p>
-                 <a target="_blank" href="https://tron-free.com/?r=89595" >
-                  <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
-
-                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-                    <a href="https://oceanbitz.com/?r=108">11. Oceanbitz</a></h3>
-                    <p>$0.0007 every 5 mins. $0.0004 every min. PTC, shortlinks, Offerwalls. $0.005 to FaucetPay</p>
-                    <a target="_blank" href="https://oceanbitz.com/?r=108" ><img src="/file/ocean.png" width="468" height="60"/></a><br>
-                    <p></p></div>
-
-
-                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                           <a href="https://multicoins.net/?r=74750">12. Multicoins</a></h3>
                           <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
                             <a target="_blank" href="https://multicoins.net/?r=74750"><img src="/file/mcoins.png" width="468" height="60"></a><p></p></div>
@@ -125,23 +114,23 @@
                 <img src="/file/cryptosa.png" width="468" height="60"/></a><br>
                  <p></p> </div>
 
-                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                  <a href="https://www.1xbitcoins.com/?r=8362">14. 1xbitcoin</a></h3>
-                  <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
-                  <a target="_blank" href="https://www.1xbitcoins.com/?r=8362"><img src="/file/1x.png" width="468" height="60"></a><p></p></div>
-
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-    <a href="https://bitcointrophy.com/?r=21954">15. Bitcoin Trophy</a></h3>
+    <a href="https://bitcointrophy.com/?r=21954">14. Bitcoin Trophy</a></h3>
       <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
       <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
+        <a href="https://coinadster.com/?ref=208315">15. Coinadster</a></h3>
+                         <p>1.2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
+        <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a><p></p></div>
 
-          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-            <a href="https://coinkrab.com/refer/user/1799">16. Coinkrab.</a></h3>
-            <p> $0.0006 every 5 mins. $0.025 to FaucetPay</p>
-            <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
-            <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p></div>
+
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+          <a href="https://coincet.com/?r=30824">16. Coincet</a></h3>
+               <p>$0.0005 every 3 mins. PTC, Shortlinks, Offerwalls.</p>
+          <a target="_blank" href="https://coincet.com/?r=30824" >
+            <img src="/file/coincet.png" width="468" height="60"/></a><br><p></p></div>
 
               <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
                 <a href="https://claimercorner.xyz/claimer/?r=29003">17. Claimers corner</a></h3><p>$0.0005 every 5 mins. PTC ads. Offerwalls. $0.001 to FaucetPay</p>
@@ -246,11 +235,14 @@
         <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
         <p></p></div>
 
-
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+          <a href="https://www.1xbitcoins.com/?r=8362">33. 1xbitcoin</a></h3>
+          <p>$0.0005 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
+          <a target="_blank" href="https://www.1xbitcoins.com/?r=8362"><img src="/file/1x.png" width="468" height="60"></a><p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://mixfaucet.com/?r=60837">33. Mix Faucet</a></h3>
+  <a href="https://mixfaucet.com/?r=60837">34. Mix Faucet</a></h3>
    <p>$0.0005 every 5 mins. shortliks, ptc, offerwalls. $0.05 to Faucetpay.</p>
    <a target="_blank" href="https://mixfaucet.com/?r=60837" >
     <img src="/file/mix.gif" width="468" height="60"/></a><br><p></p></div>
@@ -258,7 +250,7 @@
 
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-<a href="https://rollercoin.com/?r=juwv6dm0">34. Rollercoin</a></h3>
+<a href="https://rollercoin.com/?r=juwv6dm0">35. Rollercoin</a></h3>
 <p>Play games, earn coins passively.</p>
 <a target="_blank" href="https://rollercoin.com/?r=juwv6dm0" >
 <img src="/file/roller.gif" width="468" height="60"/></a><br><p></p></div>
